# cuda_study

./: freshman.hpp
matrixMult/: CMakeLists.txt  matrix_mult.cu
matrixMult/src/: kernel.cuh  utils.cu
matrixMult/src/kernel/: mykernel_v1.cuh  mykernel_v2.cuh  mykernel_v3.cuh
reduceSum/: reduceSum  reduceSum.cu
sumMatrix/: CMakeLists.txt  sumMatrix  sumMatrix.cu  sumMatrix2  sumMatrix2.cu
transMatrix_2D/: transform_matrix2d  transform_matrix2d.cu
